# src/main/java/kr/hhplus/be/server/api/order/dto/OrderResponseDto.java
@@ -1,0 +1,14 @@
+package kr.hhplus.be.server.api.order.dto;
+
+import java.util.List;
+
+public record OrderResponseDto(
+        Long orderId,
+        Long addressId,
+        String recipientName,
+        String phoneNumber,
+        List<OrderItemDto> orderItems,
+        int totalPrice,
+        String status
+) {
+}
